src/index.css
@import "tailwindcss";

@theme {
  /* Primary Brand Colors */
  --color-primary-dark: #13262F;
  /* Jet Black */
  --color-primary-accent: #EE7B30;
  /* Pumpkin Spice */

  /* Supporting Colors */
  --color-background-soft: #F9F6F1;
  /* Ivory White */
  --color-neutral-gray: #C9D1D9;
  /* Soft Gray */
  --color-success: #2E8B57;
  /* Deep Green */
  --color-deep-accent: #0B1922;
  /* Midnight Blue */

  /* Optional: Standard Text Colors */
  --color-text-light: #ffffff;
  --color-text-dark: #0A0A0A;
}

body {
  overflow-x: hidden !important;

}

